UtahLiveDataTest/src/objects/SiteVisitPerson__c.object
<CustomObject>
    <description>[Business] Information related to the person who is performing the Site Visits.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Visit Persons</relationshipLabel>
        <relationshipName>Site_Visit_Persons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailID__c</fullName>
        <formula>If(Contact__c!=null, Contact__r.Email ,User__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <formula>If(Contact__c!=null, Contact__r.FirstName &amp; &apos;&apos; &amp; Contact__r.LastName ,User__r.FirstName &amp; &apos;&apos; &amp; User__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideFlexActions__c</fullName>
        <formula>IF((ISPICKVAL(SiteVisit__r.Status__c,&apos;Initiated By PO&apos;) || ISPICKVAL(SiteVisit__r.Status__c,&apos;Grant Monitor Rejected&apos;) || ISPICKVAL(SiteVisit__r.Status__c,&apos;Program Manager Rejected&apos;)) &amp;&amp;  ($UserRole.Name == &apos;CHA Project Officer&apos; || $UserRole.Name == &apos;HAHSTA Project Officer&apos;) &amp;&amp; (isSubAwardee__c == false),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideFlexActions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFlexActions_del__c</fullName>
        <formula>IF((ISPICKVAL(SiteVisit__r.Status__c,&apos;Initiated By PO&apos;) || ISPICKVAL(SiteVisit__r.Status__c,&apos;Grant Monitor Rejected&apos;) || ISPICKVAL(SiteVisit__r.Status__c,&apos;Program Manager Rejected&apos;)) &amp;&amp;  ($UserRole.Name == &apos;CHA Project Officer&apos; || $UserRole.Name == &apos;HAHSTA Project Officer&apos;) &amp;&amp; (isSubAwardee__c == false),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideFlexActions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideRemovePersonnel__c</fullName>
        <formula>NOT(ISPICKVAL(SiteVisit__r.Status__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideRemovePersonnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <formula>If(Contact__c!=null, Contact__r.Account.Name ,User__r.OrganizationAccountName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>If(Contact__c!=null, Contact__r.Phone ,User__r.Phone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteVisit__c</fullName>
        <label>Site Visit</label>
        <referenceTo>SiteVisit__c</referenceTo>
        <relationshipLabel>Site Visit Persons</relationshipLabel>
        <relationshipName>SiteVisitPersons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <formula>If(Contact__c!=null, Contact__r.FirstName + &quot; &quot;+ &quot; &quot; +Contact__r.LastName,User__r.FirstName + &quot; &quot;+ &quot; &quot; +User__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Visit Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SiteVisitPersons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isSubAwardee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sub-Awardee?</label>
        <type>Checkbox</type>
    </fields>
    <label>Site Visit Person</label>
    <nameField>
        <label>Site Visit Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Visit Persons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>